(fix) hard reset on mobile, CSS fixes

--- a/src/app/fishbowl/game/game.page.scss
+++ b/src/app/fishbowl/game/game.page.scss
@@ -135,6 +135,8 @@ ion-card-content{
       vertical-align: middle;
     }
     .scoreboard {
+      margin-top: 8px;
+
       .on-the-spot {
         background-color: var(--ion-color-success);
         // color: var(--ion-color-light);
@@ -302,6 +304,9 @@ ion-card-content{
 
 
 .moderator-control-panel {
+  ion-card-content ion-list {
+    padding-bottom: 0px;
+  }
   .game-controls-container {
     .spotlight {
       height: 36px;
